<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:background="@color/other_statusbar"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="@dimen/status_bar_height">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@drawable/ic_avatar_background"
            android:padding="2dp"
            android:src="@mipmap/default_avatar"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@mipmap/login_right"
                android:drawablePadding="8dp"
                android:text="@string/mine_login"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvUserBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_balance"
                android:textColor="#FFFFFF"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/tvOrder"
            style="@style/mine_item"
            android:text="@string/mine_order" />

        <include layout="@layout/merge_horizontal_line" />

        <TextView
            android:id="@+id/tvBill"
            style="@style/mine_item"
            android:text="@string/mine_bill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/tvPersion"
            style="@style/mine_item"
            android:text="@string/mine_person" />

        <include layout="@layout/merge_horizontal_line" />

        <TextView
            android:id="@+id/tvSafe"
            style="@style/mine_item"
            android:text="@string/mine_safe" />

        <include layout="@layout/merge_horizontal_line" />

        <TextView
            android:id="@+id/tvSettings"
            style="@style/mine_item"
            android:text="@string/mine_settings" />
    </LinearLayout>
</LinearLayout>